--- a/grievance-backend/package.json
+++ b/grievance-backend/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/ajv": "^0.0.5",
     "@types/dotenv": "^6.1.1",
+    "ajv": "^8.17.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -25,6 +27,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.13",
     "@types/node": "^24.0.1",
     "@types/pg": "^8.15.4",
