--- a/grievance-backend/package.json
+++ b/grievance-backend/package.json
@@ -15,21 +15,27 @@
   "dependencies": {
     "@types/ajv": "^0.0.5",
     "@types/dotenv": "^6.1.1",
+    "@types/nodemailer": "^6.4.17",
     "ajv": "^8.17.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "googleapis": "^150.0.1",
     "helmet": "^8.1.0",
     "multer": "^2.0.1",
+    "nodemailer": "^7.0.3",
+    "otp-generator": "^4.0.1",
     "pg": "^8.16.0",
     "zod": "^3.25.64"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.13",
     "@types/node": "^24.0.1",
+    "@types/otp-generator": "^4.0.2",
     "@types/pg": "^8.15.4",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
